--- a/front/src/App.css
+++ b/front/src/App.css
@@ -7,6 +7,7 @@
   max-width: 50rem;
   margin: 0 auto;
   padding: 1rem;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
 }
 
 h1 {
