--- a/front/src/index.css
+++ b/front/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Inter', system-ui, -apple-system, sans-serif;
   line-height: 1.6;
   color: #333333; 
-  background-color: #f7f7f7; 
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1)); 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
