--- a/front/src/App.css
+++ b/front/src/App.css
@@ -11,13 +11,11 @@
 }
 
 h1 {
-  text-align: center;
+  text-align: left;
   color: #1a1a1a;
   margin-bottom: 1.875rem;
   font-size: 2rem;
   font-weight: 1000;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-  letter-spacing: 0.5px;
   padding: auto;
 }
 
